# BioSignal

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.yaml
src/biosignal/core/: config.py
src/biosignal/ingestion/: pubmed.py
src/biosignal/models/: paper.py
tests/: test_placeholder.py
